# Amazon-S3--Cloud-Storage

./: README.md
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/models/: models.py  schemas.py
backend/app/utils/: connection.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js
frontend/src/components/: Home.js  UserPage.js
frontend/src/components/Analytics/: UsageAnalytics.js
frontend/src/components/Auth/: Login.css  Login.js  Register.css  Register.js
frontend/src/components/FileManagement/: FileDownload.js  FileList.js  FileUpload.js  downloadFile.js
frontend/src/components/FolderManagement/: CreateFolder.js  DeleteFolder.js  FolderList.js
