[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kartik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
sqlalchemy-orm = "^1.2.10"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg2-binary = "^2.9.10"
uvicorn = "^0.32.0"
fastapi = "^0.115.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.12"
passlib = "^1.7.4"
psycopg2 = "^2.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
